# Hodhr

./: .gitignore  CMakeLists.txt  Hodhr.files  LICENSE  README.md
include/: AssetLibrary.h  Camera.h  CubeMesh.h  Model.h  NetworkManager.h  Renderer.h  SceneNode.h  Shader.h  ShaderLibrary.h  TerrainPatch.h  assetlibrary.h  camera.h  common.h  cubemesh.h  hodhr.h  model.h  networkmanager.h  objmodel.h  renderer.h  scenenode.h  shader.h  shaderlibrary.h  terrainpatch.h  texture.h  texturemanager.h  ui.h  uiimage.h  uilabel.h  uipanel.h  uiwidget.h
resources/shaders/: basic.frag  basic.fs  basic.vert  basic.vs  flat.frag  flat.vert  phong.frag  phong.frag~  phong.vert  phong.vert~  screen.frag  screen.fs  screen.vert  screen.vs
src/: AssetLibrary.cpp  AssetLibrary.h  Camera.cpp  CubeMesh.cpp  Makefile  Model.h  NetworkManager.cpp  Renderer.cpp  Renderer.h  SceneNode.cpp  SceneNode.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  TerrainPatch.cpp  TerrainPatch.h  assetlibrary.cc  camera.cc  common.cc  cubemesh.cc  main.cc  main.cpp  main.cxx  model.cc  model.cpp  networkmanager.cc  objmodel.cc  renderer.cc  scenenode.cc  shader.cc  shaderlibrary.cc  terrainpatch.cc  texture.cc  texturemanager.cc  ui.cc  uiimage.cc  uilabel.cc  uipanel.cc  uiwidget.cc
tests/: test_fonts.cpp  test_network.cpp
